Criação da seed e api de carro
