# src/swagger.json
@@ -1,68 +1,72 @@
 {
-    "openapi":"3.0.0",
+    "openapi": "3.0.0",
     "info": {
-        "title":"RentalX Documentation",
-        "description":"This is an API Rent",
+        "title": "RentalX Documentation",
+        "description": "This is an API Rent",
         "version": "1.0.0",
-        "contact":{
-            "email":"guilherme.maciel@alcans.com.br"
+        "contact": {
+            "email": "guilherme.maciel@alcans.com.br"
         }
     },
-    "paths":{
-        "/categories":{
-            "post":{
-                "tags":["Category"],
-                "summary":"Create a category",
-                "description":"Create a new category",
-                "requestBody":{
-                    "content":{
-                        "application/json":{
-                          "schema":{
-                              "type":"object",
-                              "properties":{
-                                  "name":{
-                                      "type": "string"
-                                  },
-                                  "description":{
-                                      "type":"string"
-                                  }
-                              },
-                              "example":{
-                                  "name":"category name sample",
-                                  "description":"category description name sample"
-                              }
-                          }  
+    "paths": {
+        "/categories": {
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Create a category",
+                "description": "Create a new category",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    }
+                                },
+                                "example": {
+                                    "name": "category name sample",
+                                    "description": "category description name sample"
+                                }
+                            }
                         }
                     }
                 },
-                "responses":{
-                    "201":{
-                        "description":"Created"
+                "responses": {
+                    "201": {
+                        "description": "Created"
                     },
-                    "500":{
-                        "description":"Category already exists"
+                    "500": {
+                        "description": "Category already exists"
                     }
                 }
             },
-            "get":{
-                "tags":["Category"],
+            "get": {
+                "tags": [
+                    "Category"
+                ],
                 "summary": "List all categories",
                 "description": "List all categories",
-                "responses":{
-                    "200":{
-                        "description":"Success",
-                        "content":{
-                            "application/json":{
-                                "schema":{
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
                                     "type": "array",
                                     "items": {
                                         "type": "object",
-                                        "properties":{
-                                            "name":{
+                                        "properties": {
+                                            "name": {
                                                 "type": "string"
                                             },
-                                            "description":{
-                                                "type":"string"
+                                            "description": {
+                                                "type": "string"
                                             }
                                         }
                                     }
@@ -71,20 +75,21 @@
                         }
                     }
                 }
-
             }
         },
-        "/categories/import":{
-            "post":{
-                "tags": ["Category"],
+        "/categories/import": {
+            "post": {
+                "tags": [
+                    "Category"
+                ],
                 "summary": "Upload new category",
-                "description":"Upload new category",
-                "requestBody":{
-                    "content":{
-                        "multipart/form-data":{
-                            "schema":{
-                                "properties":{
-                                    "file":{
+                "description": "Upload new category",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "file": {
                                         "type": "string",
                                         "format": "binary"
                                     }
@@ -93,46 +98,187 @@
                         }
                     }
                 },
-                "responses":{
-                    "201":{
+                "responses": {
+                    "201": {
                         "description": "Created"
                     }
                 }
             }
         },
-        "/specifications":{
-            "post":{
-                "tags": ["Specifications"],
+        "/specifications": {
+            "post": {
+                "tags": [
+                    "Specifications"
+                ],
                 "summary": "Create a specification",
                 "description": "Create a new specification",
-                "requestBody":{
-                    "content":{
-                        "application/json":{
-                            "schema":{
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
                                 "$ref": "#/definitions/Specification"
                             }
                         }
                     }
                 },
-                "responses":{
+                "responses": {
                     "201": {
-                        "description":"Created"
+                        "description": "Created"
                     },
-                    "500":{
-                        "description":"Specification already exists!"
+                    "500": {
+                        "description": "Specification already exists!"
+                    }
+                }
+            },
+            "get": {
+                "tags": [
+                    "Specifications"
+                ],
+                "summary": "List all Specifications",
+                "description": "List all specifications",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "description": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/car": {
+            "post": {
+                "tags": [
+                    "Car"
+                ],
+                "summary": "Create a Car",
+                "description": "Create a new car",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "daily_rate": {
+                                        "type": "number"
+                                    },
+                                    "license_plate": {
+                                        "type": "string"
+                                    },
+                                    "fine_amount": {
+                                        "type": "number"
+                                    },
+                                    "brand": {
+                                        "type": "string"
+                                    },
+                                    "category_id": {
+                                        "type": "string"
+                                    }
+                                },
+                                "example": {
+                                    "name": "Carro Malvadão",
+                                    "description": "Ele é um fusca",
+                                    "daily_rate": 10,
+                                    "license_plate": "ABC-624",
+                                    "fine_amount": 100,
+                                    "brand": "branco",
+                                    "category_id": "sadjkksjadksjad-545454"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Category already exists"
+                    },
+                    "404": {
+                        "description": "Server not found"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                }
+            },
+            "get": {
+                "tags": [
+                    "Car"
+                ],
+                "summary": "List all Cars",
+                "description": "List all cars",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "description": {
+                                                "type": "string"
+                                            },
+                                            "daily_rate": {
+                                                "type": "number"
+                                            },
+                                            "license_plate": {
+                                                "type": "string"
+                                            },
+                                            "fine_amount": {
+                                                "type": "number"
+                                            },
+                                            "brand": {
+                                                "type": "string"
+                                            },
+                                            "category_id": {
+                                                "type": "string"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
         }
     },
-    "definitions":{
-        "Specification":{
-            "type":"object",
-            "properties":{
-                "name":{
-                    "type":"string"
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
                 },
-                "description":{
+                "description": {
                     "type": "string"
                 }
             }
